# group7-fall2023

./: .gitignore  .replit  README.md  manage.py  pyproject.toml
poppingprojects/: asgi.py  settings.py  urls.py  wsgi.py
repositories/: admin.py  apps.py  forms.py  models.py  tests.py  update.py  updater.py  urls.py  views.py
repositories/migrations/: 0001_initial.py  0002_alter_repository_description.py  0003_userprofile.py
repositories/static/: base.css
repositories/static/css/: base.css  index.css
repositories/templates/: account.html  base.html  create_profile.html  explore.html  home.html  login.html  signup.html
