[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
requests = "2.31.0"
APScheduler = "^3.10.4"
coverage = "^7.2.7"
pytest = "7.4.3"
pytest-django = "4.7.0"
[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "poppingprojects.settings"
python_files = ["tests.py"]

[tool.coverage.run]
include = [
    "/home/runner/group7-fall2023/repositories/*",
    "/home/runner/group7-fall2023/poppingprojects/*",
    ]